make index.html smaller
Reduction of 696 bytes.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -1,110 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict with HTML5 microdata//EN" "xhtml1-strict-with-html5-microdata.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html xmlns=http://www.w3.org/1999/xhtml>
 <head>
-<style xml:space="preserve" type="text/css">BODY{font-size:16px;}
-A{background:transparent;text-decoration:none;}
-P.justtext{float:none;font-size:medium;margin-left:20px;}
-DIV.justtext{float:none;font-size:medium;margin-left:20px;}
-P.address{float:none;font-size:medium;margin-left:45px;}
-TABLE{float:none;font-size:medium;}
-P.where{float:none;font-size:medium;font-weight:bold;}
-TD.pad{text-indent:5px;}
-P.buttons A{height:31px;padding-left:88px;display:inline-block;background:url("sprite.png");}
-P.buttons A.bvw{background-position:0px 0px;}
-P.buttons A.lin{background-position:0px -35px;}
-P.buttons A.ope{background-position:0px -60px;}
-P.buttons A.rat{background-position:0px -85px;}
-P.buttons A.vcs{background-position:0px -116px;}</style>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<link rel="shortcut icon" type="image/x-icon" href="kerolasa.ico"/>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="author" content="Sami Kerola"/>
-<meta name="classification" content="personal home page"/>
-<meta name="contact_addr" content="kerolasa@iki.fi"/>
-<meta name="copyright" content="Copyright Sami Kerola"/>
-<meta name="description" content="Sami Kerola's home page and contact information"/>
-<meta name="distribution" content="global"/>
-<meta name="abstract" content="Sami Kerola's home page and contact information"/>
-<meta name="keywords" content="sami, kerola, kotisivu, homepage, home page, yhteystiedot, contact, information"/>
-<meta name="language" content="en"/>
-<meta name="owner" content="Sami Kerola"/>
-<meta name="rating" content="general"/>
-<meta name="revisit-after" content="15"/>
-<meta name="robots" content="index, follow"/>
+<style xml:space=preserve>A{background:0 0;text-decoration:none}BODY{font-size:16px}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.b A.a{background-position:0 -116px}P.b A.b{background-position:0 0}P.b A.l{background-position:0 -35px}P.b A.o{background-position:0 -60px}P.b A.r{background-position:0 -85px}P.b A{height:31px;padding-left:88px;display:inline-block;background:url(sprite.png)}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
+<meta content="text/html; charset=utf-8"http-equiv=Content-Type>
+<link href=kerolasa.ico rel="shortcut icon"type=image/x-icon>
+<meta content="width=device-width,initial-scale=1"name=viewport>
+<meta content="Sami Kerola"name=author>
+<meta content="personal home page"name=classification>
+<meta content=kerolasa@iki.fi name=contact_addr>
+<meta content="Sami Kerola"name=copyright>
+<meta content="Sami Kerola's home page and contact information"name=description>
+<meta content=global name=distribution>
+<meta content="sami, kerola, kotisivu, homepage, home page, yhteystiedot, contact, information"name=keywords>
+<meta content=en name=language>
+<meta content=general name=rating>
+<meta content=15 name=revisit-after>
+<meta content="index, follow"name=robots>
 <title>Sami Kerola</title>
 </head>
 <body>
-<section itemscope itemtype="http://schema.org/Person">
-<p class="where">Work</p>
-<p class="justtext">address<br/></p>
-<p class="address">
-<span itemprop="worksFor" itemscope
-itemtype="http://schema.org/Organization">
-<span itemprop="name">Cloudflare</span><br/>
-Sami Kerola<br/>
-<span itemprop="address" itemscope
-itemtype="http://schema.org/PostalAddress">
-<span itemprop="streetAddress">25 Lavington Street, 2nd floor</span><br/>
-<span itemprop="addressLocality">London</span><br/>
-<span itemprop="postalCode">SE1 0NA</span><br/>
-<span itemprop="addressCountry">United Kingdom</span></p>
-</span>
-<div class="justtext">
-<table border="0" cellspacing="2" cellpadding="0" summary="work">
+<section itemscope itemtype=http://schema.org/Person>
+<p class=w>Work</p>
+<p class=j>address<br></p>
+<p class=a>
+<span itemprop=worksFor itemscope itemtype=http://schema.org/Organization>
+<span itemprop=name>Cloudflare</span><br>
+Sami Kerola<br>
+<span itemprop=address itemscope itemtype=http://schema.org/PostalAddress>
+<span itemprop=streetAddress>25 Lavington Street, 2nd floor</span><br>
+<span itemprop=addressLocality>London</span><br>
+<span itemprop=postalCode>SE1 0NA</span><br>
+<span itemprop=addressCountry>United Kingdom</span></span></span></p>
+<div class=j>
+<table border=0 cellpadding=0 cellspacing=2 summary=work>
 <tr>
 <td>email</td>
-<td class="pad"><a href="mailto:kerolasa@cloudflare.com"
-itemprop="email">kerolasa@cloudflare.com</a></td>
+<td class=d><a href=mailto:kerolasa@cloudflare.com itemprop=email>kerolasa@cloudflare.com</a></td>
 </tr>
 <tr>
 <td>mobile</td>
-<td class="pad"><a href="tel:+447795344427" itemprop="telephone">+44 779 5344 427</a></td>
+<td class=d><a href=tel:+447795344427 itemprop=telephone>+44 779 5344 427</a></td>
 </tr>
 <tr>
 <td>web page</td>
-<td class="pad"><a href="https://www.cloudflare.com/"
-itemprop="url">https://www.cloudflare.com/</a></td>
+<td class=d><a href=https://www.cloudflare.com/ itemprop=url>https://www.cloudflare.com/</a></td>
 </tr>
-</span>
 </table>
 </div>
-<p class="where">Home</p>
-<p class="justtext">address<br/></p>
-<p class="address"><span itemprop="name">Sami Kerola</span><br/>
-<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-<span itemprop="streetAddress">Flat 4, Clarion House<br/>
-70 Park Hill</span><br/>
-<span itemprop="addresslocality">London</span><br/>
-<span itemprop="postalCode">SW4 9PB</span><br/>
-<span itemprop="addressCountry">United Kingdom</span></p>
-</span>
-<div class="justtext">
-<table border="0" cellspacing="2" cellpadding="0" summary="home">
+<p class=w>Home</p>
+<p class=j>address<br></p>
+<p class=a><span itemprop=name>Sami Kerola</span><br>
+<span itemprop=address itemscope itemtype=http://schema.org/PostalAddress>
+<span itemprop=streetAddress>Flat 4, Clarion House<br>
+70 Park Hill</span><br>
+<span itemprop=addresslocality>London</span><br>
+<span itemprop=postalCode>SW4 9PB</span><br>
+<span itemprop=addressCountry>United Kingdom</span></span></p>
+<div class=j>
+<table border=0 cellpadding=0 cellspacing=2 summary=home>
 <tr>
 <td>email</td>
-<td class="pad"><a href="mailto:kerolasa@iki.fi" itemprop="email">kerolasa@iki.fi</a></td>
+<td class=d><a href=mailto:kerolasa@iki.fi itemprop=email>kerolasa@iki.fi</a></td>
 </tr>
 <tr>
 <td>gnupg</td>
-<td class="pad"><a href="http://pgp.mit.edu/pks/lookup?op=get&amp;search=0x8ED396E37E38D471A00530D3A9553245FDE9B739">8ED396E37E38D471A00530D3A9553245FDE9B739</a></td>
+<td class=d><a href="http://pgp.mit.edu/pks/lookup?op=get&search=0x8ED396E37E38D471A00530D3A9553245FDE9B739">8ED396E37E38D471A00530D3A9553245FDE9B739</a></td>
 </tr>
 <tr>
 <td>web page</td>
-<td class="pad"><a href="http://www.iki.fi/kerolasa/" itemprop="url">http://www.iki.fi/kerolasa/</a></td>
+<td class=d><a href=http://www.iki.fi/kerolasa/ itemprop=url>http://www.iki.fi/kerolasa/</a></td>
 </tr>
 </table>
 </div>
-<div style="visibility:hidden">
-<span itemprop="jobTitle">system administrator</span>
-<span itemprop="image">http://kerolasa.github.io/me_london.jpg</span>
+<div style=visibility:hidden>
+<span itemprop=jobTitle>system administrator</span>
+<span itemprop=image>http://kerolasa.github.io/me_london.jpg</span>
 </div>
 </section>
-<p><a href="second.html">Second page.</a></p>
-<p class="buttons"><a class="lin" href="http://www.linkedin.com/in/kerolasa"></a>
-<a class="ope" href="https://www.openhub.net/accounts/kerolasa"></a>
-<a class="rat" href="http://www.ratebeer.com/View-User-110452.htm"></a><br/>
-<a class="vcs" href="http://jigsaw.w3.org/css-validator/"></a>
-<a class="bvw" href="http://www.anybrowser.org/campaign/"></a></p>
-</body>
-</html>
+<p><a href=second.html>Second page.</a></p>
+<p class=b><a href=http://www.linkedin.com/in/kerolasa class=l></a>
+<a href=https://www.openhub.net/accounts/kerolasa class=o></a>
+<a href=http://www.ratebeer.com/View-User-110452.htm class=r></a><br>
+<a href=http://jigsaw.w3.org/css-validator/ class=a></a>
+<a href=http://www.anybrowser.org/campaign/ class=v></a></p>
