use AMP aka accelerated mobile pages
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html xmlns=http://www.w3.org/1999/xhtml>
 <head>
-<style xml:space=preserve>A{background:0 0;text-decoration:none}BODY{font-size:16px}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.b A.a{background-position:0 -116px}P.b A.b{background-position:0 0}P.b A.l{background-position:0 -35px}P.b A.o{background-position:0 -60px}P.b A.r{background-position:0 -85px}P.b A{height:31px;padding-left:88px;display:inline-block;background:url(sprite.png)}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
+<style xml:space=preserve>A{background:0 0;text-decoration:none}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.b A.a{background-position:0 -116px}P.b A.b{background-position:0 0}P.b A.l{background-position:0 -35px}P.b A.o{background-position:0 -60px}P.b A.r{background-position:0 -85px}P.b A{height:31px;padding-left:88px;display:inline-block;background:url(sprite.png)}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
+<script async src="https://cdn.ampproject.org/v0.js"></script>
 <meta content="text/html; charset=utf-8"http-equiv=Content-Type>
 <link href=kerolasa.ico rel="shortcut icon"type=image/x-icon>
 <meta content="width=device-width,initial-scale=1"name=viewport>
