--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html>
-<html xmlns=http://www.w3.org/1999/xhtml>
+<!doctype html>
+<html amp lang="en">
 <head>
-<style xml:space=preserve>A{background:0 0;text-decoration:none}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.b A.a{background-position:0 -116px}P.b A.b{background-position:0 0}P.b A.l{background-position:0 -35px}P.b A.o{background-position:0 -60px}P.b A.r{background-position:0 -85px}P.b A{height:31px;padding-left:88px;display:inline-block;background:url(sprite.png)}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
+<meta charset="utf-8">
+<style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+<style amp-custom>A{background:0 0;text-decoration:none}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.b A.a{background-position:0 -116px}P.b A.b{background-position:0 0}P.b A.l{background-position:0 -35px}P.b A.o{background-position:0 -60px}P.b A.r{background-position:0 -85px}P.b A{height:31px;padding-left:88px;display:inline-block;background:url(sprite.png)}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <meta content="text/html; charset=utf-8"http-equiv=Content-Type>
 <link href=kerolasa.ico rel="shortcut icon"type=image/x-icon>
-<meta content="width=device-width,initial-scale=1"name=viewport>
+<link rel="canonical" href="index.html">
+<meta content="width=device-width,minimum-scale=1,initial-scale=1" name=viewport>
 <meta content="Sami Kerola"name=author>
 <meta content="personal home page"name=classification>
 <meta content=kerolasa@iki.fi name=contact_addr>
@@ -16,7 +18,6 @@
 <meta content="sami, kerola, kotisivu, homepage, home page, yhteystiedot, contact, information"name=keywords>
 <meta content=en name=language>
 <meta content=general name=rating>
-<meta content=15 name=revisit-after>
 <meta content="index, follow"name=robots>
 <title>Sami Kerola</title>
 </head>
@@ -34,7 +35,7 @@ Sami Kerola<br>
 <span itemprop=postalCode>SE1 0NA</span><br>
 <span itemprop=addressCountry>United Kingdom</span></span></span></p>
 <div class=j>
-<table border=0 cellpadding=0 cellspacing=2 summary=work>
+<table border=0 cellpadding=0 cellspacing=2>
 <tr>
 <td>email</td>
 <td class=d><a href=mailto:kerolasa@cloudflare.com itemprop=email>kerolasa@cloudflare.com</a></td>
@@ -59,7 +60,7 @@ Sami Kerola<br>
 <span itemprop=postalCode>SW4 9PB</span><br>
 <span itemprop=addressCountry>United Kingdom</span></span></p>
 <div class=j>
-<table border=0 cellpadding=0 cellspacing=2 summary=home>
+<table border=0 cellpadding=0 cellspacing=2>
 <tr>
 <td>email</td>
 <td class=d><a href=mailto:kerolasa@iki.fi itemprop=email>kerolasa@iki.fi</a></td>
@@ -74,10 +75,6 @@ Sami Kerola<br>
 </tr>
 </table>
 </div>
-<div style=visibility:hidden>
-<span itemprop=jobTitle>system administrator</span>
-<span itemprop=image>http://kerolasa.github.io/me_london.jpg</span>
-</div>
 </section>
 <p><a href=second.html>Second page.</a></p>
 <p class=b><a href=http://www.linkedin.com/in/kerolasa class=l></a>
@@ -85,3 +82,5 @@ Sami Kerola<br>
 <a href=http://www.ratebeer.com/View-User-110452.htm class=r></a><br>
 <a href=http://jigsaw.w3.org/css-validator/ class=a></a>
 <a href=http://www.anybrowser.org/campaign/ class=v></a></p>
+</body>
+</html>
