london pubs: add three new locations
Hop Burns & Black bottle shop, and two sights The Mayflower Pub and The
Prospect of Whitby.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/london_pubs.html
+++ b/london_pubs.html
@@ -168,6 +168,10 @@ SW11 1SF</p>
 Fuller's Brewery Shop<br />
 Chiswick Lane South<br />
 W4 2QB</p>
+<p>Between Peckham and East Dulwich<br />
+Hop Burns &amp; Black<br />
+38 East Dulwich Road<br />
+SE22 9AX</p>
 <h2>Beautiful Pubs</h2>
 <p>The places in this list do not have special beer selection, but
 the pubs themselves are such unique that they should be visited.
@@ -197,5 +201,13 @@ SE1 1NH</p>
 Dragonfly Brewery<br />
 183 High Street<br />
 W3 9DJ</p>
+<p>By Rotherhithe overground station<br />
+The Mayflower Pub<br />
+117 Rotherhithe Street<br />
+SE16 4NF</p>
+<p>Not far off Wapping overground station<br />
+The Prospect of Whitby<br />
+57 Wapping Wall<br />
+E1W 3SH</p>
 </body>
 </html>
