remove unnecessary graphics
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-<style amp-custom>A{background:0 0;text-decoration:none}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.b A.a{background-position:0 -116px}P.b A.b{background-position:0 0}P.b A.l{background-position:0 -35px}P.b A.o{background-position:0 -60px}P.b A.r{background-position:0 -85px}P.b A{height:31px;padding-left:88px;display:inline-block;background:url(sprite.png)}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
+<style amp-custom>A{background:0 0;text-decoration:none}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <meta content="text/html; charset=utf-8"http-equiv=Content-Type>
 <link href=kerolasa.ico rel="shortcut icon"type=image/x-icon>
@@ -77,10 +77,5 @@ Sami Kerola<br>
 </div>
 </section>
 <p><a href=second.html>Second page.</a></p>
-<p class=b><a href=http://www.linkedin.com/in/kerolasa class=l></a>
-<a href=https://www.openhub.net/accounts/kerolasa class=o></a>
-<a href=http://www.ratebeer.com/View-User-110452.htm class=r></a><br>
-<a href=http://jigsaw.w3.org/css-validator/ class=a></a>
-<a href=http://www.anybrowser.org/campaign/ class=v></a></p>
 </body>
 </html>
