--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style amp-custom>A{background:0 0;text-decoration:none}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <meta content="text/html; charset=utf-8"http-equiv=Content-Type>
-<link href=kerolasa.ico rel="shortcut icon"type=image/x-icon>
+<link href=kerolasa.png rel="icon"type=image/png>
 <link rel="canonical" href="index.html">
 <meta content="width=device-width,minimum-scale=1,initial-scale=1" name=viewport>
 <meta content="Sami Kerola"name=author>
