improve structured data
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <span itemprop=name>Cloudflare</span><br>
 Sami Kerola<br>
 <span itemprop=address itemscope itemtype=http://schema.org/PostalAddress>
-<span itemprop=streetAddress>25 Lavington Street, 2nd floor</span><br>
+<span itemprop=streetAddress>25 Lavington Street</span>, 2nd floor<br>
 <span itemprop=addressLocality>London</span><br>
 <span itemprop=postalCode>SE1 0NA</span><br>
 <span itemprop=addressCountry>United Kingdom</span></span></span></p>
@@ -38,11 +38,11 @@ Sami Kerola<br>
 <table border=0 cellpadding=0 cellspacing=2>
 <tr>
 <td>email</td>
-<td class=d><a href=mailto:kerolasa@cloudflare.com itemprop=email>kerolasa@cloudflare.com</a></td>
+<td class=d><a href=mailto:kerolasa@cloudflare.com itemprop=email content=kerolasa@cloudflare.com>kerolasa@cloudflare.com</a></td>
 </tr>
 <tr>
 <td>mobile</td>
-<td class=d><a href=tel:+447795344427 itemprop=telephone>+44 779 5344 427</a></td>
+<td class=d><a href=tel:+447795344427 itemprop=telephone content=+447795344427>+44 779 5344 427</a></td>
 </tr>
 <tr>
 <td>web page</td>
@@ -52,10 +52,10 @@ Sami Kerola<br>
 </div>
 <p class=w>Home</p>
 <p class=j>address<br></p>
-<p class=a><span itemprop=name>Sami Kerola</span><br>
-<span itemprop=address itemscope itemtype=http://schema.org/PostalAddress>
-<span itemprop=streetAddress>Flat 4, Clarion House<br>
-70 Park Hill</span><br>
+<p class=a><span itemprop=givenName>Sami</span> <span itemprop=familyName>Kerola</span><br>
+<span itemprop=homeLocation itemscope itemtype=http://schema.org/PostalAddress>
+<span itemprop=alternateName>Flat 4, Clarion House</span><br>
+<span itemprop=streetAddress>70 Park Hill</span><br>
 <span itemprop=addresslocality>London</span><br>
 <span itemprop=postalCode>SW4 9PB</span><br>
 <span itemprop=addressCountry>United Kingdom</span></span></p>
@@ -63,7 +63,7 @@ Sami Kerola<br>
 <table border=0 cellpadding=0 cellspacing=2>
 <tr>
 <td>email</td>
-<td class=d><a href=mailto:kerolasa@iki.fi itemprop=email>kerolasa@iki.fi</a></td>
+<td class=d><a href=mailto:kerolasa@iki.fi itemprop=email content=kerolasa@iki.fi>kerolasa@iki.fi</a></td>
 </tr>
 <tr>
 <td>gnupg</td>
@@ -71,10 +71,13 @@ Sami Kerola<br>
 </tr>
 <tr>
 <td>web page</td>
-<td class=d><a href=http://www.iki.fi/kerolasa/ itemprop=url>http://www.iki.fi/kerolasa/</a></td>
+<Ctd class=d><a href=http://www.iki.fi/kerolasa/ itemprop=url>http://www.iki.fi/kerolasa/</a></td>
 </tr>
 </table>
 </div>
+<meta itemprop="birthDate" content="1977-04-28" />
+<meta itemprop="gender" content="male" />
+<meta itemprop="image" content="http://www.iki.fi/kerolasa/me_london.jpg" />
 </section>
 <p><a href=second.html>Second page.</a></p>
 </body>
