add sameas links to structured data
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@ Sami Kerola<br>
 <meta itemprop="birthDate" content="1977-04-28" />
 <meta itemprop="gender" content="male" />
 <meta itemprop="image" content="http://www.iki.fi/kerolasa/me_london.jpg" />
+<meta itemprop="sameas" content="http://en.gravatar.com/kerolasa" />
+<meta itemprop="sameas" content="http://savannah.gnu.org/users/kerolasa" />
+<meta itemprop="sameas" content="http://stackoverflow.com/users/796585/sami-kerola" />
+<meta itemprop="sameas" content="http://www.linkedin.com/in/kerolasa" />
+<meta itemprop="sameas" content="https://github.com/kerolasa" />
+<meta itemprop="sameas" content="https://keybase.io/kerolasa" />
+<meta itemprop="sameas" content="https://plus.google.com/117341944650953092607" />
+<meta itemprop="sameas" content="https://sourceforge.net/u/kerolasa/profile/" />
+<meta itemprop="sameas" content="https://www.openhub.net/accounts/kerolasa" />
 </section>
 <p><a href=second.html>Second page.</a></p>
 </body>
