--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Sami Kerola<br>
 </tr>
 <tr>
 <td>web page</td>
-<Ctd class=d><a href=http://www.iki.fi/kerolasa/ itemprop=url>http://www.iki.fi/kerolasa/</a></td>
+<td class=d><a href=http://www.iki.fi/kerolasa/ itemprop=url>http://www.iki.fi/kerolasa/</a></td>
 </tr>
 </table>
 </div>
