ensure W3C markup validator does not complain
Reference: https://validator.w3.org/
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
 <html xmlns=http://www.w3.org/1999/xhtml>
 <head>
-<style xml:space=preserve>A{background:0 0;text-decoration:none}BODY{font-size:16px}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.b A.a{background-position:0 -116px}P.b A.b{background-position:0 0}P.b A.l{background-position:0 -35px}P.b A.o{background-position:0 -60px}P.b A.r{background-position:0 -85px}P.b A{height:31px;padding-left:88px;display:inline-block;background:url(sprite.png)}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
-<meta content="text/html; charset=utf-8"http-equiv=Content-Type>
-<link href=kerolasa.png rel="icon"type=image/png>
+<style>A{background:0 0;text-decoration:none}BODY{font-size:16px}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.b A.a{background-position:0 -116px}P.b A.b{background-position:0 0}P.b A.l{background-position:0 -35px}P.b A.o{background-position:0 -60px}P.b A.r{background-position:0 -85px}P.b A{height:31px;padding-left:88px;display:inline-block;background:url(sprite.png)}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
+<meta content="text/html; charset=utf-8" http-equiv=Content-Type>
+<link href=kerolasa.png rel="icon" type=image/png>
 <link rel="canonical" href="index.html">
 <meta content="width=device-width,minimum-scale=1,initial-scale=1" name=viewport>
-<meta content="Sami Kerola"name=author>
-<meta content="personal home page"name=classification>
+<meta content="Sami Kerola" name=author>
+<meta content="personal home page" name=classification>
 <meta content=kerolasa@iki.fi name=contact_addr>
-<meta content="Sami Kerola"name=copyright>
-<meta content="Sami Kerola's home page and contact information"name=description>
+<meta content="Sami Kerola" name=copyright>
+<meta content="Sami Kerola's home page and contact information" name=description>
 <meta content=global name=distribution>
-<meta content="sami, kerola, kotisivu, homepage, home page, yhteystiedot, contact, information"name=keywords>
+<meta content="sami, kerola, kotisivu, homepage, home page, yhteystiedot, contact, information" name=keywords>
 <meta content=en name=language>
 <meta content=general name=rating>
-<meta content="index, follow"name=robots>
+<meta content="index, follow" name=robots>
 <title>Sami Kerola</title>
 </head>
 <body>
 <section itemscope itemtype=http://schema.org/Person>
-<p class=w>Work</p>
+<h4>work</h4>
 <p class=j>address<br></p>
 <p class=a>
 <span itemprop=worksFor itemscope itemtype=http://schema.org/Organization>
@@ -33,7 +32,7 @@ Sami Kerola<br>
 <span itemprop=postalCode>SE1 0NA</span><br>
 <span itemprop=addressCountry>United Kingdom</span></span></span></p>
 <div class=j>
-<table border=0 cellpadding=0 cellspacing=2>
+<table>
 <tr>
 <td>email</td>
 <td class=d><a href=mailto:kerolasa@cloudflare.com itemprop=email content=kerolasa@cloudflare.com>kerolasa@cloudflare.com</a></td>
@@ -48,7 +47,7 @@ Sami Kerola<br>
 </tr>
 </table>
 </div>
-<p class=w>Home</p>
+<h4>home</h4>
 <p class=j>address<br></p>
 <p class=a><span itemprop=givenName>Sami</span> <span itemprop=familyName>Kerola</span><br>
 <span itemprop=homeLocation itemscope itemtype=http://schema.org/PostalAddress>
@@ -58,7 +57,7 @@ Sami Kerola<br>
 <span itemprop=postalCode>SW4 9PB</span><br>
 <span itemprop=addressCountry>United Kingdom</span></span></p>
 <div class=j>
-<table border=0 cellpadding=0 cellspacing=2>
+<table>
 <tr>
 <td>email</td>
 <td class=d><a href=mailto:kerolasa@iki.fi itemprop=email content=kerolasa@iki.fi>kerolasa@iki.fi</a></td>
