remove unnecessary quotes
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <style>A{background:0 0;text-decoration:none}BODY{font-size:16px}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.b A.a{background-position:0 -116px}P.b A.b{background-position:0 0}P.b A.l{background-position:0 -35px}P.b A.o{background-position:0 -60px}P.b A.r{background-position:0 -85px}P.b A{height:31px;padding-left:88px;display:inline-block;background:url(sprite.png)}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
 <meta content="text/html; charset=utf-8" http-equiv=Content-Type>
-<link href=kerolasa.png rel="icon" type=image/png>
-<link rel="canonical" href="index.html">
+<link href=kerolasa.png rel=icon type=image/png>
+<link rel=canonical href=index.html>
 <meta content="width=device-width,minimum-scale=1,initial-scale=1" name=viewport>
 <meta content="Sami Kerola" name=author>
 <meta content="personal home page" name=classification>
@@ -72,18 +72,18 @@ Sami Kerola<br>
 </tr>
 </table>
 </div>
-<meta itemprop="birthDate" content="1977-04-28" />
-<meta itemprop="gender" content="male" />
-<meta itemprop="image" content="http://www.iki.fi/kerolasa/me_london.jpg" />
-<meta itemprop="sameas" content="http://en.gravatar.com/kerolasa" />
-<meta itemprop="sameas" content="http://savannah.gnu.org/users/kerolasa" />
-<meta itemprop="sameas" content="http://stackoverflow.com/users/796585/sami-kerola" />
-<meta itemprop="sameas" content="http://www.linkedin.com/in/kerolasa" />
-<meta itemprop="sameas" content="https://github.com/kerolasa" />
-<meta itemprop="sameas" content="https://keybase.io/kerolasa" />
-<meta itemprop="sameas" content="https://plus.google.com/117341944650953092607" />
-<meta itemprop="sameas" content="https://sourceforge.net/u/kerolasa/profile/" />
-<meta itemprop="sameas" content="https://www.openhub.net/accounts/kerolasa" />
+<meta itemprop=birthDate content=1977-04-28 />
+<meta itemprop=gender content=male />
+<meta itemprop=image content="http://www.iki.fi/kerolasa/me_london.jpg"/>
+<meta itemprop=sameas content="http://en.gravatar.com/kerolasa"/>
+<meta itemprop=sameas content="http://savannah.gnu.org/users/kerolasa"/>
+<meta itemprop=sameas content="http://stackoverflow.com/users/796585/sami-kerola"/>
+<meta itemprop=sameas content="http://www.linkedin.com/in/kerolasa"/>
+<meta itemprop=sameas content="https://github.com/kerolasa"/>
+<meta itemprop=sameas content="https://keybase.io/kerolasa"/>
+<meta itemprop=sameas content="https://plus.google.com/117341944650953092607"/>
+<meta itemprop=sameas content="https://sourceforge.net/u/kerolasa/profile/"/>
+<meta itemprop=sameas content="https://www.openhub.net/accounts/kerolasa"/>
 </section>
 <p><a href=second.html>Second page.</a></p>
 </body>
