use fewer spaces in telephone number
And remove the content=<nr> markup.  It did not work as expected, that is,
display the number without spaces or tel: prefix in microdata.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Sami Kerola<br>
 </tr>
 <tr>
 <td>mobile</td>
-<td class=d><a href=tel:+447795344427 itemprop=telephone content=+447795344427>+44 779 5344 427</a></td>
+<td class=d><a href=tel:+447795344427 itemprop=telephone>+44 77953 44427</a></td>
 </tr>
 <tr>
 <td>web page</td>
