use correct work postcode
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Sami Kerola<br>
 <span itemprop=address itemscope itemtype=http://schema.org/PostalAddress>
 <span itemprop=streetAddress>25 Lavington Street</span>, 2nd floor<br>
 <span itemprop=addressLocality>London</span><br>
-<span itemprop=postalCode>SE1 0NA</span><br>
+<span itemprop=postalCode>SE1 0NZ</span><br>
 <span itemprop=addressCountry>United Kingdom</span></span></span></p>
 <div class=j>
 <table>
