--- a/london_pubs.html
+++ b/london_pubs.html
@@ -27,187 +27,9 @@
 </head>
 <body>
 <h1>London pub recommendations</h1>
-<p>If the list below feels difficult to use consider seeing
-locations from a <a href=
+<p>See
+from <a href=
 "https://www.google.com/maps/d/edit?mid=zbGTR-VnidrI.ku9RRy0kZqvI&amp;usp=sharing">
 google map</a>.</p>
-<h2>The pubs.</h2>
-<p>I chose to list these pubs based on good beer selection.</p>
-<p>Just round corner to Trafalgar Square<br />
-The Harp<br />
-47 Chandos Place<br />
-WC2N 4HS</p>
-<p>In front of Euston station<br />
-Euston Tap<br />
-190 Euston Road<br />
-NW1 2EF</p>
-<p>South bank near London bridge<br />
-Rake<br />
-14 Winchester Walk<br />
-SE1 9AG</p>
-<p>Close by Tottenham court station<br />
-Craft Beer - Covent Garden<br />
-168 High Holborn<br />
-WC1V 7AA</p>
-<p>Close by Farringdon station<br />
-Craft Beer - Clerkenwell<br />
-82 Leather Lane<br />
-EC1N 7TR</p>
-<p>Close by Angel station<br />
-Craft Beer - Islington<br />
-55 White Lion Street<br />
-N1 9PP</p>
-<p>Close by Farringdon station<br />
-Jerusalem Tavern<br />
-55 Briton Street<br />
-EC1M 5NA</p>
-<p>Close by Farringdon station<br />
-Dovetail<br />
-9 Jerusalem Passage<br />
-EC1V 4JP</p>
-<p>In between Pimlico and Victoria stations<br />
-CASK Pub &amp; Kitchen<br />
-6 Charlwood Street<br />
-SW1V 2EE</p>
-<p>Close to Shepherd's bush market tube station<br />
-BrewDog Shepherds Bush<br />
-15-19 Goldhawk Road<br />
-W12 8QQ</p>
-<p>Close to Hammersmith tube station<br />
-Draft House Hammersmith<br />
-238 Shepherds Bush Road<br />
-W6 7NL</p>
-<p>Across street Parson's green tube station<br />
-White Horse on Parson's Green<br />
-1-3 Parson's Green<br />
-SW6 4UL</p>
-<p>Not far from Parsons Green tube station<br />
-Octoberfest Pub<br />
-678-680 Fulham Road<br />
-SW6 5SA</p>
-<p>At Stoke Newington<br />
-The Jolly Butchers<br />
-204 Stoke Newington High Street<br />
-N16 7HU</p>
-<p>In hart of Hackney<br />
-Cock Tavern<br />
-315 Mare Street<br />
-E8 1EJ</p>
-<p>Very close to Bethnal Green tube station<br />
-Mother Kelly's<br />
-251 Paradise Row<br />
-E2 9LE</p>
-<h2>Bermondsey Beer Mile</h2>
-<p>The Bermondsey is district in London east from Tower Bridge, and
-for some reason a many microbreweries are brewing there. Most of
-these breweries are open to visit only at Saturdays, and that is
-the recommended day to do the Beer Mile crawl. Following listing
-assumes you start from east and move to west.</p>
-<p>Fourpure<br />
-Rotherhithe New Road<br />
-SE16 3LL</p>
-<p>Eebria<br />
-15 Almond Road<br />
-SE16 3LR</p>
-<p>Partizan Brewing<br />
-8 Almond Road<br />
-SE16 3LR</p>
-<p>Kernel Brewery<br />
-Unit 11, Dockley Road<br />
-SE16 3SF</p>
-<p>Brewed by numbers<br />
-79 Enid Street<br />
-SE16 3RA</p>
-<p>Ubrew<br />
-24 Old Jamaica Road<br />
-SE16 4AW</p>
-<p>The Bottle Shop<br />
-128 Druid Street<br />
-SE1 2HH</p>
-<p>Anspach &amp; Hobday<br />
-118 Druid Street<br />
-SE1 2HH</p>
-<p>Southwark Brewing<br />
-46 Druid Street<br />
-SE1 2EZ</p>
-<h2>Bottle shops</h2>
-<p>It is somewhat surprising there are just handful of bottle shops
-in London, when taking account there are so many people living
-here. Perhaps part of the explanation is the fact that pubs are
-allowed to sell take-away bottles and growlers. Anyway, there are
-some and I have found these to be worthwhile visiting.</p>
-<p>Close by Kentish Town tube station<br />
-Clapton Craft<br />
-326 Kentish Town Rd<br />
-NW5 2TH</p>
-<p>Between Kentish Town and Caledonian Road tube stations<br />
-Kris Wines<br />
-394 York Way<br />
-N7 9LW</p>
-<p>Five minute walk from Chancery Lane tube station<br />
-BottleDog<br />
-69 Gray's Inn Road<br />
-WC1X 8TR</p>
-<p>South bank near London bridge<br />
-Utobeer Market Stall<br />
-Borough Market<br />
-SE1 1TL</p>
-<p>Close by Putney bridge<br />
-Drink of Fulham<br />
-349 Fulham Palace Road<br />
-SW6 6TB</p>
-<p>By East Putney tube station<br />
-The Beer Boutique<br />
-134 Upper Richmond Road<br />
-SW15 2SP</p>
-<p>Not far from Clapham Junction railway station<br />
-We Brought Beer<br />
-78 St John's Hill<br />
-SW11 1SF</p>
-<p>Down by Thames from Stamford brook tube station<br />
-Fuller's Brewery Shop<br />
-Chiswick Lane South<br />
-W4 2QB</p>
-<p>Between Peckham and East Dulwich<br />
-Hop Burns &amp; Black<br />
-38 East Dulwich Road<br />
-SE22 9AX</p>
-<h2>Beautiful Pubs</h2>
-<p>The places in this list do not have special beer selection, but
-the pubs themselves are such unique that they should be visited.
-You can expect to find somewhat old but absolutely stunning
-atmosphere in these locations.</p>
-<p>Not far from Paddington station<br />
-Victoria (Fuller's)<br />
-10 Strathearn Place<br />
-W2 2NH</p>
-<p>North side of Hampstead heath<br />
-The Spaniards Inn<br />
-Spaniards Road<br />
-NW3 7JJ</p>
-<p>Near by City Thameslink railway station<br />
-Ye Olde Cheshire Cheese<br />
-145 Fleet Street<br />
-EC4A 2BU</p>
-<p>By Chancery Lane tube station<br />
-Cittie of Yorke<br />
-22 High Holborn<br />
-WC1V 6BN</p>
-<p>By Borough market<br />
-The George Inn Yard<br />
-77 Borough High Street<br />
-SE1 1NH</p>
-<p>Not far from Acton Town tube station<br />
-Dragonfly Brewery<br />
-183 High Street<br />
-W3 9DJ</p>
-<p>By Rotherhithe overground station<br />
-The Mayflower Pub<br />
-117 Rotherhithe Street<br />
-SE16 4NF</p>
-<p>Not far off Wapping overground station<br />
-The Prospect of Whitby<br />
-57 Wapping Wall<br />
-E1W 3SH</p>
 </body>
 </html>
