--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@ Sami Kerola<br>
 </tr>
 <tr>
 <td>web page</td>
-<td class=d><a href=http://www.iki.fi/kerolasa/ itemprop=url>http://www.iki.fi/kerolasa/</a></td>
+<td class=d><a href=https://www.iki.fi/kerolasa/ itemprop=url>https://www.iki.fi/kerolasa/</a></td>
 </tr>
 </table>
 </div>
 <meta itemprop=birthDate content=1977-04-28 />
 <meta itemprop=gender content=male />
-<meta itemprop=image content="http://www.iki.fi/kerolasa/me_london.jpg"/>
+<meta itemprop=image content="https://www.iki.fi/kerolasa/me_london.jpg"/>
 <meta itemprop=sameas content="https://en.gravatar.com/kerolasa"/>
 <meta itemprop=sameas content="https://github.com/kerolasa/"/>
 <meta itemprop=sameas content="https://keybase.io/kerolasa"/>
