fix canonical link tag, and remove useless meta tags
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
 <style>A{background:0 0;text-decoration:none}BODY{font-size:16px}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.b A.a{background-position:0 -116px}P.b A.b{background-position:0 0}P.b A.l{background-position:0 -35px}P.b A.o{background-position:0 -60px}P.b A.r{background-position:0 -85px}P.b A{height:31px;padding-left:88px;display:inline-block;background:url(sprite.png)}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
 <meta content="text/html; charset=utf-8" http-equiv=Content-Type>
 <link href=kerolasa.png rel=icon type=image/png>
-<link rel=canonical href=index.html>
+<link rel=canonical href=https://www.iki.fi/kerolasa>
 <meta content="width=device-width,minimum-scale=1,initial-scale=1" name=viewport>
-<meta content="Sami Kerola" name=author>
-<meta content="personal home page" name=classification>
-<meta content=kerolasa@iki.fi name=contact_addr>
-<meta content="Sami Kerola" name=copyright>
-<meta content="Sami Kerola's home page and contact information" name=description>
-<meta content=global name=distribution>
-<meta content="sami, kerola, kotisivu, homepage, home page, yhteystiedot, contact, information" name=keywords>
 <meta content=en name=language>
-<meta content=general name=rating>
 <meta content="index, follow" name=robots>
 <title>Sami Kerola</title>
 </head>
