update office address
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <p class=j>address<br></p>
 <p class=a>
 <span itemprop=worksFor itemscope itemtype=http://schema.org/Organization>
-<span itemprop=name>Cloudflare</span><br>
+<span itemprop=name>Cloudflare Ltd</span><br>
 Sami Kerola<br>
 <span itemprop=address itemscope itemtype=http://schema.org/PostalAddress>
-<span itemprop=streetAddress>25 Lavington Street</span>, 2nd floor<br>
+<span itemprop=streetAddress>The Riverside Building, County Hall</span>, 6th floor<br>
 <span itemprop=addressLocality>London</span><br>
-<span itemprop=postalCode>SE1 0NZ</span><br>
+<span itemprop=postalCode>SE1 7PB</span><br>
 <span itemprop=addressCountry>United Kingdom</span></span></span></p>
 <div class=j>
 <table>
