--- a/measurements.html
+++ b/measurements.html
@@ -16,27 +16,28 @@
 <body>
 <h3>Sami Kerola clothes size measurements</h3>
 <table border="1" cellspacing="2" cellpadding="0">
-<tr><td rowspan="22"><img src="measurements.jpg" alt="how to measure"></td><tr>
-<tr><th>symbol</th><th>what</th><th>centimeters</th><th>inches</th></tr>
-<tr><td>A</td><td>bust</td><td>111</td><td>43.7</td></tr>
-<tr><td>B</td><td>waist</td><td>111.7</td><td>44</td></tr>
-<tr><td>C</td><td>hips</td><td>118</td><td>46.6</td></tr>
-<tr><td>D</td><td>back width</td><td>42</td><td>16.5</td></tr>
-<tr><td>E</td><td>front chest</td><td>47</td><td>18.5</td></tr>
-<tr><td>F</td><td>shoulder</td><td>16</td><td>6.3</td></tr>
-<tr><td>G</td><td>neck size</td><td>44</td><td>17.3</td></tr>
-<tr><td>H</td><td>sleeve</td><td>62</td><td>24.4</td></tr>
-<tr><td>K-M</td><td>outside leg</td><td>109</td><td>42.9</td></tr>
-<tr><td>L-M</td><td>inside leg</td><td>83.8</td><td>33</td></tr>
-<tr><td>M</td><td>knee</td><td>9</td><td>3.5</td></tr>
-<tr><td>N</td><td>wrist</td><td>18</td><td>7.0</td></tr>
-<tr><td>O</td><td>upper arm</td><td>27</td><td>10.6</td></tr>
-<tr><td>P</td><td>calf</td><td>43</td><td>16.9</td></tr>
-<tr><td>R</td><td>ankle</td><td>26</td><td>10.2</td></tr>
-<tr><td>G-B</td><td>nape to waist</td><td>49</td><td>19.3</td></tr>
-<tr><td>B-C</td><td>waist to hip</td><td>12</td><td>4.7</td></tr>
-<tr><td>F-B</td><td>front shoulder to waist</td><td>54</td><td>21.3</td></tr>
-<tr><td>?</td><td>head diameter</td><td>58</td><td>22.8</td></tr>
+<tr><td rowspan="23"><img src="measurements.jpg" alt="how to measure"></td><tr>
+<tr> <th>symbol</th> <th>what</th>                                   <th>cm</th>   <th>inches</th></tr>
+<tr> <td>A</td>      <td>bust</td>                                   <td align="right">107</td>  <td align="right">42.12</td></tr>
+<tr> <td>B</td>      <td>waist</td>                                  <td align="right">105</td>  <td align="right">41.33</td></tr>
+<tr> <td>C</td>      <td>hips</td>                                   <td align="right">110</td>  <td align="right">43.30</td></tr>
+<tr> <td>D</td>      <td>back&nbsp;width</td>                        <td align="right">41</td>   <td align="right">16.14</td></tr>
+<tr> <td>E</td>      <td>front&nbsp;chest</td>                       <td align="right">43</td>   <td align="right">16.92</td></tr>
+<tr> <td>F</td>      <td>shoulder</td>                               <td align="right">14</td>   <td align="right">5.51</td></tr>
+<tr> <td>G</td>      <td>neck&nbsp;size</td>                         <td align="right">43</td>   <td align="right">16.92</td></tr>
+<tr> <td>H</td>      <td>sleeve</td>                                 <td align="right">62</td>   <td align="right">24.40</td></tr>
+<tr> <td>K-M</td>    <td>outside&nbsp;leg</td>                       <td align="right">108</td>  <td align="right">42.51</td></tr>
+<tr> <td>L-M</td>    <td>inside&nbsp;leg</td>                        <td align="right">78</td>   <td align="right">30.70</td></tr>
+<tr> <td>M</td>      <td>knee</td>                                   <td align="right">43</td>   <td align="right">16.92</td></tr>
+<tr> <td>N</td>      <td>wrist</td>                                  <td align="right">18</td>   <td align="right">7.08</td></tr>
+<tr> <td>O</td>      <td>upper&nbsp;arm</td>                         <td align="right">35</td>   <td align="right">13.77</td></tr>
+<tr> <td>P</td>      <td>calf</td>                                   <td align="right">43</td>   <td align="right">16.92</td></tr>
+<tr> <td>R</td>      <td>ankle</td>                                  <td align="right">27</td>   <td align="right">10.62</td></tr>
+<tr> <td>G-B</td>    <td>nape&nbsp;to&nbsp;waist</td>                <td align="right">50</td>   <td align="right">19.68</td></tr>
+<tr> <td>B-C</td>    <td>waist&nbsp;to&nbsp;hip</td>                 <td align="right">16</td>   <td align="right">6.29</td></tr>
+<tr> <td>F-B</td>    <td>front&nbsp;shoulder&nbsp;to&nbsp;waist</td> <td align="right">40</td>   <td align="right">15.74</td></tr>
+<tr> <td>none</td>   <td>head&nbsp;diameter</td>                     <td align="right">57.5</td> <td align="right">22.63</td></tr>
+<tr> <td>none</td>   <td>shoe&nbsp;size</td>                         <td align="right">43</td>   <td align="right">-</td></tr>
 </table>
 </body>
 </html>
