add more accounts to sameas list
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@ Sami Kerola<br>
 <meta itemprop=sameas content="https://www.linkedin.com/in/kerolasa/"/>
 <meta itemprop=sameas content="https://www.openhub.net/accounts/kerolasa"/>
 <meta itemprop=sameas content="https://www.ratebeer.com/user/110452/"/>
+<meta itemprop=sameas content="https://www.instagram.com/kerolasa/"/>
+<meta itemprop=sameas content="https://twitter.com/kerolasa"/>
 </section>
 <p><a href=second.html>Second page.</a></p>
 </body>
