add tea tasting notes
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/second.html
+++ b/second.html
@@ -61,7 +61,8 @@
   <a href="number2numerum.sh">Script converting number
   to english numeral</a><br />
   <a href="amsterdam_pubs.html">Amsterdam beer recommendations</a><br />
-  <a href="london_pubs.html">London beer recommendations</a>
+  <a href="london_pubs.html">London beer recommendations</a><br />
+  <a href="tea.html">Tea tasting notes</a>
   </p>
 
   <p><a class="out" href="http://dhcpd-pools.sourceforge.net/">My
