tea: Robe Rouge and Darlington
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -22,11 +22,14 @@
 
 <h2>Mariage Frères -
 <a href="https://www.mariagefreres.com/UK/2-robe-rouge-supreme-blue-tea-china-T2315.html">Robe Rouge Suprême</a></h2>
-<p>2020-10-10.  To be reviewed.</p>
+<p>2020-10-10.  Blue tea.  Taste give clear seaweed aroma.  Good one, but
+this does require question is this worth the price?  Maybe once, but I doubt
+twice.</p>
 
 <h2>Mariage Frères -
 <a href="https://www.mariagefreres.com/UK/2-darlington-T737.html">Darlington</a></h2>
-<p>2020-10-10.  To be reviewed.</p>
+<p>2020-10-10.  Black tea.  Really good smell.  Not super interesting, but
+nothing to complain.</p>
 
 <h2>The Tea House -
 <a href="https://theteahouseltd.com/rooibos/rooibos-cinnamon-vanilla/p-001329">Rooibos Cinnamon And Vanilla</a></h2>
