tea: update page title
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -15,7 +15,7 @@
 <meta name="revisit-after" content="15" />
 <meta name="robots" content="index, follow" />
 <link type="text/css" rel="stylesheet" href="kerolasa.css" />
-<title>London pub recommendations</title>
+<title>Sami's tea tasting notes</title>
 </head>
 <body>
 <h1>Sami's tea tasting notes</h1>
