tea: visit to Twinings 2020-10-31
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -20,6 +20,25 @@
 <body>
 <h1>Sami's tea tasting notes</h1>
 
+<h2>Twinings -
+<a href="https://www.twinings.co.uk/tea/loose-tea/discovery-collection-forest-fruits-loose">Forest Fruits Black</a></h2>
+<p>2020-10-31.</p>
+
+<h2>Twinings -
+<a href="https://www.twinings.co.uk/tea/loose-black-tea/lapsang-souchong">Lapsang Souchong</a></h2>
+<p>2020-10-31.  Smoky black tea.  Great smell.  Fairly straightforward smoke
+aroma.  To be honest; I wouldn't mind this being more smoky.</p>
+
+<h2>Twinings -
+<a href="https://www.twinings.co.uk/tea/loose-black-tea/london-strand-strong-breakfast">London Strand Strong Breakfast</a></h2>
+<p>2020-10-31.  Black tea.  Good tea without faults.  Taste is better when
+not boiling hot.  Similar to Darlington I had earlier, but not as
+expensive.</p>
+
+<h2>Twinings -
+<a href="https://www.twinings.co.uk/tea/loose-black-tea/nutty-chocolate-assam-loose-tea">Nutty Chocolate Assam</a></h2>
+<p>2020-10-31.</p>
+
 <h2>Mariage Frères -
 <a href="https://www.mariagefreres.com/UK/2-robe-rouge-supreme-blue-tea-china-T2315.html">Robe Rouge Suprême</a></h2>
 <p>2020-10-10.  Blue tea.  Taste give clear seaweed aroma.  Good one, but
