--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Sami Kerola<br>
 </tr>
 <tr>
 <td>gnupg</td>
-<td class=d><a href="https://pgp.key-server.io/pks/lookup?search=0x8ED396E37E38D471A00530D3A9553245FDE9B739&fingerprint=on">8ED396E37E38D471A00530D3A9553245FDE9B739</a></td>
+<td class=d><a href="http://keys.gnupg.net/pks/lookup?op=get&search=0x8ED396E37E38D471A00530D3A9553245FDE9B739">8ED396E37E38D471A00530D3A9553245FDE9B739</a></td>
 </tr>
 <tr>
 <td>web page</td>
