tea: add the missing Twinings 2020-10-31 descriptions
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -22,7 +22,8 @@
 
 <h2>Twinings -
 <a href="https://www.twinings.co.uk/tea/loose-tea/discovery-collection-forest-fruits-loose">Forest Fruits Black</a></h2>
-<p>2020-10-31.</p>
+<p>2020-10-31.  Black tea.  Really nice smell.  Taste gives a little hint of
+berries.  I like this one.</p>
 
 <h2>Twinings -
 <a href="https://www.twinings.co.uk/tea/loose-black-tea/lapsang-souchong">Lapsang Souchong</a></h2>
@@ -37,7 +38,9 @@ expensive.</p>
 
 <h2>Twinings -
 <a href="https://www.twinings.co.uk/tea/loose-black-tea/nutty-chocolate-assam-loose-tea">Nutty Chocolate Assam</a></h2>
-<p>2020-10-31.</p>
+<p>2020-10-31.  Blak tea.  Smell has nice hazelnut aroma, but I don't like
+test of it.  In wine terms this tea is too dry.  I guess this one would be
+better with milk, but that is not how I drink my tea.</p>
 
 <h2>Mariage Frères -
 <a href="https://www.mariagefreres.com/UK/2-robe-rouge-supreme-blue-tea-china-T2315.html">Robe Rouge Suprême</a></h2>
